// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestActorUE4-0-2 Read MyBasicActor: exports 1`] = `
Array [
  FObjectExport {
    "ClassIndex": -7,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "K2Node_Event_DeltaSeconds",
    "OuterIndex": 14,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 77294,
    "SerialSize": 36,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -11,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "CustomEventDispatcher",
    "OuterIndex": 14,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 77330,
    "SerialSize": 40,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -13,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "Cube",
    "OuterIndex": 14,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 77370,
    "SerialSize": 40,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -13,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "Sphere",
    "OuterIndex": 14,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 77410,
    "SerialSize": 40,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -6,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "Input1",
    "OuterIndex": 6,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 77450,
    "SerialSize": 38,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -8,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "CustomEventDispatcher__DelegateSignature",
    "OuterIndex": 14,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 77488,
    "SerialSize": 47,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -9,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EntryPoint",
    "OuterIndex": 8,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 77535,
    "SerialSize": 36,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -8,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "ExecuteUbergraph_TestActorUE4-0-2",
    "OuterIndex": 14,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 77571,
    "SerialSize": 192,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -7,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "DeltaSeconds",
    "OuterIndex": 10,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 77763,
    "SerialSize": 36,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -8,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "ReceiveTick",
    "OuterIndex": 14,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 77799,
    "SerialSize": 81,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": -26,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -8,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "ReceiveBeginPlay",
    "OuterIndex": 14,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 77880,
    "SerialSize": 65,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": -25,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -8,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "UserConstructionScript",
    "OuterIndex": 14,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 77945,
    "SerialSize": 47,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": -27,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -8,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "CustomFunction",
    "OuterIndex": 14,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 77992,
    "SerialSize": 125,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -16,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "TestActorUE4-0-2_C",
    "OuterIndex": 0,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 78117,
    "SerialSize": 180,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": -14,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 9,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": 14,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "Default__TestActorUE4-0-2_C",
    "OuterIndex": 0,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 78297,
    "SerialSize": 122,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 17,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -15,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "TestActorUE4-0-2",
    "OuterIndex": 0,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 78419,
    "SerialSize": 1164,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 11,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -17,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "CustomEventDispatcher",
    "OuterIndex": 16,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 79583,
    "SerialSize": 153,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -17,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "CustomFunction",
    "OuterIndex": 16,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 79736,
    "SerialSize": 132,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -17,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "CustomGraph",
    "OuterIndex": 16,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 79868,
    "SerialSize": 140,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -17,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EventGraph",
    "OuterIndex": 16,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 80008,
    "SerialSize": 113,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -17,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "UserConstructionScript",
    "OuterIndex": 16,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 80121,
    "SerialSize": 153,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2575",
    "OuterIndex": 60,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 80274,
    "SerialSize": 146,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2624",
    "OuterIndex": 60,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 80420,
    "SerialSize": 148,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2688",
    "OuterIndex": 55,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 80568,
    "SerialSize": 149,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2689",
    "OuterIndex": 55,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 80717,
    "SerialSize": 146,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2690",
    "OuterIndex": 55,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 80863,
    "SerialSize": 260,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2691",
    "OuterIndex": 55,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 81123,
    "SerialSize": 242,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2692",
    "OuterIndex": 55,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 81365,
    "SerialSize": 258,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2693",
    "OuterIndex": 55,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 81623,
    "SerialSize": 306,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2694",
    "OuterIndex": 55,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 81929,
    "SerialSize": 297,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2695",
    "OuterIndex": 55,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 82226,
    "SerialSize": 396,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2647",
    "OuterIndex": 61,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 82622,
    "SerialSize": 186,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2465",
    "OuterIndex": 56,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 82808,
    "SerialSize": 149,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2466",
    "OuterIndex": 56,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 82957,
    "SerialSize": 146,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2467",
    "OuterIndex": 56,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 83103,
    "SerialSize": 260,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2468",
    "OuterIndex": 56,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 83363,
    "SerialSize": 242,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2469",
    "OuterIndex": 56,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 83605,
    "SerialSize": 248,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2470",
    "OuterIndex": 56,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 83853,
    "SerialSize": 306,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2471",
    "OuterIndex": 56,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 84159,
    "SerialSize": 297,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2472",
    "OuterIndex": 56,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 84456,
    "SerialSize": 396,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2473",
    "OuterIndex": 57,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 84852,
    "SerialSize": 149,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2474",
    "OuterIndex": 57,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 85001,
    "SerialSize": 146,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2475",
    "OuterIndex": 57,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 85147,
    "SerialSize": 260,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2476",
    "OuterIndex": 57,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 85407,
    "SerialSize": 242,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2477",
    "OuterIndex": 57,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 85649,
    "SerialSize": 248,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2478",
    "OuterIndex": 57,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 85897,
    "SerialSize": 306,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2479",
    "OuterIndex": 57,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 86203,
    "SerialSize": 297,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2480",
    "OuterIndex": 57,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 86500,
    "SerialSize": 396,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2508",
    "OuterIndex": 58,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 86896,
    "SerialSize": 160,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2509",
    "OuterIndex": 58,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 87056,
    "SerialSize": 186,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2510",
    "OuterIndex": 58,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 87242,
    "SerialSize": 155,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2499",
    "OuterIndex": 59,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 87397,
    "SerialSize": 160,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2500",
    "OuterIndex": 59,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 87557,
    "SerialSize": 186,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "EdGraphPin_2413",
    "OuterIndex": 62,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 87743,
    "SerialSize": 146,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -3,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "K2Node_CallFunction_7632",
    "OuterIndex": 18,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 87889,
    "SerialSize": 296,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -3,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "K2Node_CallFunction_1",
    "OuterIndex": 19,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 88185,
    "SerialSize": 324,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -3,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "K2Node_CallFunction_2",
    "OuterIndex": 19,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 88509,
    "SerialSize": 324,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -4,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "K2Node_Event_109",
    "OuterIndex": 19,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 88833,
    "SerialSize": 253,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -4,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "K2Node_Event_90",
    "OuterIndex": 19,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 89086,
    "SerialSize": 249,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -5,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "K2Node_FunctionEntry_39",
    "OuterIndex": 17,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 89335,
    "SerialSize": 233,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -5,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "K2Node_FunctionEntry_52",
    "OuterIndex": 18,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 89568,
    "SerialSize": 189,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -5,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "K2Node_FunctionEntry_8",
    "OuterIndex": 21,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 89757,
    "SerialSize": 164,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -10,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "PackageMetaData",
    "OuterIndex": 0,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 89921,
    "SerialSize": 1308,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": true,
    "bNotForServer": true,
    "objectFlags": 2,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -20,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "SceneComponent_1",
    "OuterIndex": 14,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 91229,
    "SerialSize": 12,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 40,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -24,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "SceneThumbnailInfo_1",
    "OuterIndex": 16,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 91241,
    "SerialSize": 12,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 0,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -21,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "SCS_Node_1",
    "OuterIndex": 69,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 91253,
    "SerialSize": 104,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -21,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "SCS_Node_2",
    "OuterIndex": 69,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 91357,
    "SerialSize": 144,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -21,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "SCS_Node_3",
    "OuterIndex": 69,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 91501,
    "SerialSize": 104,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -22,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "SimpleConstructionScript_1",
    "OuterIndex": 14,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 91605,
    "SerialSize": 80,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -23,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "StaticMeshComponent_5",
    "OuterIndex": 14,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 91685,
    "SerialSize": 44,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 40,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -23,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": 0,
    "ObjectName": "StaticMeshComponent_8",
    "OuterIndex": 14,
    "ScriptSerializationEndOffset": 0,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 91729,
    "SerialSize": 88,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 40,
    "packageFlags": 0,
  },
]
`;

exports[`TestActorUE4-0-2 Read MyBasicActor: imports 1`] = `
Array [
  FObjectImport {
    "ClassName": "Actor",
    "ClassPackage": "/Script/Engine",
    "ObjectName": "Default__Actor",
    "OuterIndex": -34,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "EdGraphSchema_K2",
    "OuterIndex": -32,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "K2Node_CallFunction",
    "OuterIndex": -32,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "K2Node_Event",
    "OuterIndex": -32,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "K2Node_FunctionEntry",
    "OuterIndex": -32,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "BoolProperty",
    "OuterIndex": -33,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "FloatProperty",
    "OuterIndex": -33,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "Function",
    "OuterIndex": -33,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "IntProperty",
    "OuterIndex": -33,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "MetaData",
    "OuterIndex": -33,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "MulticastDelegateProperty",
    "OuterIndex": -33,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "Object",
    "OuterIndex": -33,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "ObjectProperty",
    "OuterIndex": -33,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "Actor",
    "OuterIndex": -34,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "Blueprint",
    "OuterIndex": -34,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "BlueprintGeneratedClass",
    "OuterIndex": -34,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "EdGraph",
    "OuterIndex": -34,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "EdGraphPin",
    "OuterIndex": -34,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "KismetSystemLibrary",
    "OuterIndex": -34,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "SceneComponent",
    "OuterIndex": -34,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "SCS_Node",
    "OuterIndex": -34,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "SimpleConstructionScript",
    "OuterIndex": -34,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "StaticMeshComponent",
    "OuterIndex": -34,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "SceneThumbnailInfo",
    "OuterIndex": -35,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Function",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "ReceiveBeginPlay",
    "OuterIndex": -14,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Function",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "ReceiveTick",
    "OuterIndex": -14,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Function",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "UserConstructionScript",
    "OuterIndex": -14,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Function",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "PrintString",
    "OuterIndex": -19,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "KismetSystemLibrary",
    "ClassPackage": "/Script/Engine",
    "ObjectName": "Default__KismetSystemLibrary",
    "OuterIndex": -34,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Package",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "/Engine/EngineMeshes/Cube",
    "OuterIndex": 0,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Package",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "/Engine/EngineMeshes/Sphere",
    "OuterIndex": 0,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Package",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "/Script/BlueprintGraph",
    "OuterIndex": 0,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Package",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "/Script/CoreUObject",
    "OuterIndex": 0,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Package",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "/Script/Engine",
    "OuterIndex": 0,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Package",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "/Script/UnrealEd",
    "OuterIndex": 0,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "ScriptStruct",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "LinearColor",
    "OuterIndex": -12,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "StaticMesh",
    "ClassPackage": "/Script/Engine",
    "ObjectName": "Cube",
    "OuterIndex": -30,
    "PackageName": "",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "StaticMesh",
    "ClassPackage": "/Script/Engine",
    "ObjectName": "Sphere",
    "OuterIndex": -31,
    "PackageName": "",
    "bImportOptional": false,
  },
]
`;

exports[`TestActorUE4-0-2 Read MyBasicActor: summary 1`] = `
FPackageFileSummary {
  "AssetRegistryDataOffset": 76587,
  "BulkDataStartOffset": 91817,
  "ChunkIDs": Array [],
  "CompatibleWithEngineVersion": "4.0.2-2034640+++depot+UE4-Releases+4.0",
  "CompressionFlags": 0,
  "CustomVersionContainer": FCustomVersionContainer {
    "Versions": Array [],
  },
  "DependsOffset": 9302,
  "ExportCount": 71,
  "ExportOffset": 4758,
  "FileVersionLicenseeUE": 0,
  "FileVersionUE4": 342,
  "FileVersionUE5": 0,
  "GatherableTextDataCount": 0,
  "GatherableTextDataOffset": 0,
  "Generations": Array [
    FGenerationInfo {
      "ExportCount": 71,
      "NameCount": 191,
    },
  ],
  "Guid": "{e5400093-4e0a-2a69-9ac4-5bacfe8c9690}",
  "ImportCount": 38,
  "ImportOffset": 3694,
  "LegacyFileVersion": -3,
  "LittleEndian": true,
  "LocalizationId": "",
  "NameCount": 191,
  "NameOffset": 180,
  "PackageFlags": 0,
  "PackageName": "None",
  "PackageSource": 1748579674,
  "PersistentGuid": "{e5400093-4e0a-2a69-9ac4-5bacfe8c9690}",
  "PreloadDependencyCount": -1,
  "PreloadDependencyOffset": 0,
  "SavedByEngineVersion": "4.0.2-2034640+++depot+UE4-Releases+4.0",
  "SearchableNamesOffset": 0,
  "SoftObjectPathsCount": 0,
  "SoftObjectPathsOffset": 0,
  "SoftPackageReferencesCount": 0,
  "SoftPackageReferencesOffset": 0,
  "Tag": 2653586369,
  "ThumbnailTableOffset": 76544,
  "TotalHeaderSize": 77294,
  "WorldTileInfoDataOffset": 0,
}
`;

exports[`TestActorUE5-4-4 Read MyBasicActor: exports 1`] = `
Array [
  FObjectExport {
    "ClassIndex": -10,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "TestActorUE5-4-4",
    "OuterIndex": 0,
    "ScriptSerializationEndOffset": 1755,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 30024,
    "SerialSize": 1759,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": true,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": true,
    "bNotForServer": true,
    "objectFlags": 11,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -11,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "TestActorUE5-4-4_C",
    "OuterIndex": 0,
    "ScriptSerializationEndOffset": 67,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 31783,
    "SerialSize": 547,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": -9,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": true,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 9,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -12,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "CustomEventDispatcher",
    "OuterIndex": 1,
    "ScriptSerializationEndOffset": 173,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 32330,
    "SerialSize": 177,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -12,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "CustomFunction",
    "OuterIndex": 1,
    "ScriptSerializationEndOffset": 152,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 32507,
    "SerialSize": 156,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -12,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "CustomGraph",
    "OuterIndex": 1,
    "ScriptSerializationEndOffset": 160,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 32663,
    "SerialSize": 164,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -12,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "EventGraph",
    "OuterIndex": 1,
    "ScriptSerializationEndOffset": 128,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 32827,
    "SerialSize": 132,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -12,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "UserConstructionScript",
    "OuterIndex": 1,
    "ScriptSerializationEndOffset": 173,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 32959,
    "SerialSize": 177,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -6,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "CustomEventDispatcher__DelegateSignature",
    "OuterIndex": 2,
    "ScriptSerializationEndOffset": 9,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 33136,
    "SerialSize": 107,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -6,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "CustomFunction",
    "OuterIndex": 2,
    "ScriptSerializationEndOffset": 9,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 33243,
    "SerialSize": 122,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -6,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "ExecuteUbergraph_TestActorUE4-0-2",
    "OuterIndex": 2,
    "ScriptSerializationEndOffset": 9,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 33365,
    "SerialSize": 311,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -6,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "ReceiveBeginPlay",
    "OuterIndex": 2,
    "ScriptSerializationEndOffset": 9,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 33676,
    "SerialSize": 63,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": -19,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -6,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "ReceiveTick",
    "OuterIndex": 2,
    "ScriptSerializationEndOffset": 9,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 33739,
    "SerialSize": 150,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": -20,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 1,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -3,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "K2Node_CallFunction_7632",
    "OuterIndex": 4,
    "ScriptSerializationEndOffset": 348,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 33889,
    "SerialSize": 2533,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -3,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "K2Node_CallFunction_1",
    "OuterIndex": 5,
    "ScriptSerializationEndOffset": 377,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 36422,
    "SerialSize": 2552,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -3,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "K2Node_CallFunction_2",
    "OuterIndex": 5,
    "ScriptSerializationEndOffset": 377,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 38974,
    "SerialSize": 2552,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -4,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "K2Node_Event_109",
    "OuterIndex": 5,
    "ScriptSerializationEndOffset": 276,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 41526,
    "SerialSize": 947,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -4,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "K2Node_Event_90",
    "OuterIndex": 5,
    "ScriptSerializationEndOffset": 276,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 42473,
    "SerialSize": 704,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -5,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "K2Node_FunctionEntry_39",
    "OuterIndex": 3,
    "ScriptSerializationEndOffset": 243,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 43177,
    "SerialSize": 729,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -5,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "K2Node_FunctionEntry_52",
    "OuterIndex": 4,
    "ScriptSerializationEndOffset": 243,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 43906,
    "SerialSize": 475,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -5,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "K2Node_FunctionEntry_8",
    "OuterIndex": 7,
    "ScriptSerializationEndOffset": 218,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 44381,
    "SerialSize": 426,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -7,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "PackageMetaData",
    "OuterIndex": 0,
    "ScriptSerializationEndOffset": 9,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 44807,
    "SerialSize": 1276,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": true,
    "bNotForServer": true,
    "objectFlags": 2,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -14,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "SceneComponent_1",
    "OuterIndex": 2,
    "ScriptSerializationEndOffset": 9,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 46083,
    "SerialSize": 17,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 41,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -18,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "SceneThumbnailInfo_1",
    "OuterIndex": 1,
    "ScriptSerializationEndOffset": 9,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 46100,
    "SerialSize": 13,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -15,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "SCS_Node_1",
    "OuterIndex": 27,
    "ScriptSerializationEndOffset": 249,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 46113,
    "SerialSize": 253,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -15,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "SCS_Node_2",
    "OuterIndex": 27,
    "ScriptSerializationEndOffset": 294,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 46366,
    "SerialSize": 298,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -15,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "SCS_Node_3",
    "OuterIndex": 27,
    "ScriptSerializationEndOffset": 249,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 46664,
    "SerialSize": 253,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -16,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "SimpleConstructionScript_1",
    "OuterIndex": 2,
    "ScriptSerializationEndOffset": 132,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 46917,
    "SerialSize": 136,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 8,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -17,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "StaticMeshComponent_5",
    "OuterIndex": 2,
    "ScriptSerializationEndOffset": 120,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 47053,
    "SerialSize": 132,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 41,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": -17,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "StaticMeshComponent_8",
    "OuterIndex": 2,
    "ScriptSerializationEndOffset": 193,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 47185,
    "SerialSize": 205,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 41,
    "packageFlags": 0,
  },
  FObjectExport {
    "ClassIndex": 2,
    "CreateBeforeCreateDependencies": 0,
    "CreateBeforeSerializationDependencies": 0,
    "FirstExportDependency": -1,
    "ObjectName": "Default__TestActorUE5-4-4_C",
    "OuterIndex": 0,
    "ScriptSerializationEndOffset": 227,
    "ScriptSerializationStartOffset": 0,
    "SerialOffset": 47390,
    "SerialSize": 231,
    "SerializationBeforeCreateDependencies": 0,
    "SerializationBeforeSerializationDependencies": 0,
    "SuperIndex": 0,
    "TemplateIndex": 0,
    "bForcedExport": false,
    "bGeneratePublicHash": false,
    "bIsAsset": false,
    "bIsInheritedInstance": false,
    "bNotAlwaysLoadedForEditorGame": false,
    "bNotForClient": false,
    "bNotForServer": false,
    "objectFlags": 49,
    "packageFlags": 0,
  },
]
`;

exports[`TestActorUE5-4-4 Read MyBasicActor: imports 1`] = `
Array [
  FObjectImport {
    "ClassName": "Actor",
    "ClassPackage": "/Script/Engine",
    "ObjectName": "Default__Actor",
    "OuterIndex": -27,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "EdGraphSchema_K2",
    "OuterIndex": -25,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "K2Node_CallFunction",
    "OuterIndex": -25,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "K2Node_Event",
    "OuterIndex": -25,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "K2Node_FunctionEntry",
    "OuterIndex": -25,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "Function",
    "OuterIndex": -26,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "MetaData",
    "OuterIndex": -26,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "Object",
    "OuterIndex": -26,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "Actor",
    "OuterIndex": -27,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "Blueprint",
    "OuterIndex": -27,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "BlueprintGeneratedClass",
    "OuterIndex": -27,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "EdGraph",
    "OuterIndex": -27,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "KismetSystemLibrary",
    "OuterIndex": -27,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "SceneComponent",
    "OuterIndex": -27,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "SCS_Node",
    "OuterIndex": -27,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "SimpleConstructionScript",
    "OuterIndex": -27,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "StaticMeshComponent",
    "OuterIndex": -27,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Class",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "SceneThumbnailInfo",
    "OuterIndex": -28,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Function",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "ReceiveBeginPlay",
    "OuterIndex": -9,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Function",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "ReceiveTick",
    "OuterIndex": -9,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Function",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "PrintString",
    "OuterIndex": -13,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "KismetSystemLibrary",
    "ClassPackage": "/Script/Engine",
    "ObjectName": "Default__KismetSystemLibrary",
    "OuterIndex": -27,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Package",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "/Engine/EngineMeshes/Cube",
    "OuterIndex": 0,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Package",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "/Engine/EngineMeshes/Sphere",
    "OuterIndex": 0,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Package",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "/Script/BlueprintGraph",
    "OuterIndex": 0,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Package",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "/Script/CoreUObject",
    "OuterIndex": 0,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Package",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "/Script/Engine",
    "OuterIndex": 0,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "Package",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "/Script/UnrealEd",
    "OuterIndex": 0,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "ScriptStruct",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "LinearColor",
    "OuterIndex": -26,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "ScriptStruct",
    "ClassPackage": "/Script/CoreUObject",
    "ObjectName": "PointerToUberGraphFrame",
    "OuterIndex": -27,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "StaticMesh",
    "ClassPackage": "/Script/Engine",
    "ObjectName": "Cube",
    "OuterIndex": -23,
    "PackageName": "None",
    "bImportOptional": false,
  },
  FObjectImport {
    "ClassName": "StaticMesh",
    "ClassPackage": "/Script/Engine",
    "ObjectName": "Sphere",
    "OuterIndex": -24,
    "PackageName": "None",
    "bImportOptional": false,
  },
]
`;

exports[`TestActorUE5-4-4 Read MyBasicActor: summary 1`] = `
FPackageFileSummary {
  "AssetRegistryDataOffset": 13480,
  "BulkDataStartOffset": 47621,
  "ChunkIDs": Array [],
  "CompatibleWithEngineVersion": "0.0.0-0",
  "CompressionFlags": 0,
  "CustomVersionContainer": FCustomVersionContainer {
    "Versions": Array [
      FCustomVersion {
        "FriendlyName": "",
        "Key": "{12f88b9f-8875-4afc-a67c-d90c383abd29}",
        "Version": 48,
      },
      FCustomVersion {
        "FriendlyName": "",
        "Key": "{29e575dd-e0a3-4627-9d10-d276232cdcea}",
        "Version": 17,
      },
      FCustomVersion {
        "FriendlyName": "",
        "Key": "{375ec13c-06e4-48fb-b500-84f0262a717e}",
        "Version": 4,
      },
      FCustomVersion {
        "FriendlyName": "",
        "Key": "{59da5d52-1232-4948-b878-597870b8e98b}",
        "Version": 8,
      },
      FCustomVersion {
        "FriendlyName": "",
        "Key": "{5b4c06b7-2463-4af8-805b-bf70cdf5d0dd}",
        "Version": 12,
      },
      FCustomVersion {
        "FriendlyName": "",
        "Key": "{601d1886-ac64-4f84-aa16-d3de0deac7d6}",
        "Version": 134,
      },
      FCustomVersion {
        "FriendlyName": "",
        "Key": "{697dd581-e64f-41ab-aa4a-51ecbeb7b628}",
        "Version": 119,
      },
      FCustomVersion {
        "FriendlyName": "",
        "Key": "{9c54d522-a826-4fbe-9421-074661b482d0}",
        "Version": 44,
      },
      FCustomVersion {
        "FriendlyName": "",
        "Key": "{b0d832e4-1f89-4f0d-accf-7eb736fd4aa2}",
        "Version": 10,
      },
      FCustomVersion {
        "FriendlyName": "",
        "Key": "{cffc743f-43b0-4480-9391-14df171d2073}",
        "Version": 37,
      },
      FCustomVersion {
        "FriendlyName": "",
        "Key": "{d89b5e42-24bd-4d46-8412-aca8df641779}",
        "Version": 51,
      },
      FCustomVersion {
        "FriendlyName": "",
        "Key": "{e4b068ed-f494-42e9-a231-da0b2e46bb41}",
        "Version": 40,
      },
      FCustomVersion {
        "FriendlyName": "",
        "Key": "{e7086368-6b23-4c58-8439-1b7016265e91}",
        "Version": 13,
      },
    ],
  },
  "DependsOffset": 9227,
  "ExportCount": 30,
  "ExportOffset": 5867,
  "FileVersionLicenseeUE": 0,
  "FileVersionUE4": 522,
  "FileVersionUE5": 1012,
  "GatherableTextDataCount": 0,
  "GatherableTextDataOffset": 0,
  "Generations": Array [
    FGenerationInfo {
      "ExportCount": 30,
      "NameCount": 173,
    },
  ],
  "Guid": "{49fd8ed3-452a-9b64-78f3-90a6ab49a6d5}",
  "ImportCount": 32,
  "ImportOffset": 4587,
  "LegacyFileVersion": -8,
  "LittleEndian": true,
  "LocalizationId": "B6E7139CD376FFC1BE85243DBBE1F3E3",
  "NameCount": 173,
  "NameOffset": 552,
  "PackageFlags": 262144,
  "PackageName": "/Game/TestActorUE5-4-4",
  "PackageSource": 1642012539,
  "PersistentGuid": "{d2f1c5c0-4a64-aac4-a795-42977f89b78f}",
  "PreloadDependencyCount": -1,
  "PreloadDependencyOffset": 30024,
  "SavedByEngineVersion": "0.0.0-0",
  "SearchableNamesOffset": 9455,
  "SoftObjectPathsCount": 4,
  "SoftObjectPathsOffset": 4446,
  "SoftPackageReferencesCount": 1,
  "SoftPackageReferencesOffset": 9447,
  "Tag": 2653586369,
  "ThumbnailTableOffset": 13382,
  "TotalHeaderSize": 30024,
  "WorldTileInfoDataOffset": 0,
}
`;
